--- a/trunk/mytestapp2013/res/layout/favorite_row.xml
+++ b/trunk/mytestapp2013/res/layout/favorite_row.xml
@@ -9,7 +9,10 @@
         android:layout_height="wrap_content"
         android:stretchColumns="4" >
 
-        <TableRow android:gravity="center" >
+        <TableRow
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center" >
 
             <TextView
                 android:id="@+id/favorite_row_sn"
@@ -66,7 +69,7 @@
 
             <LinearLayout
                 android:layout_width="80dp"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:gravity="center" >
 
                 <ImageView
