--- a/trunk/mytestapp2013/res/layout/dish_row.xml
+++ b/trunk/mytestapp2013/res/layout/dish_row.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:paddingLeft="@dimen/dish_list_padding"
         android:text="TextView"
         android:textSize="24dp" />
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/img"
         android:layout_alignLeft="@+id/dishName"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:paddingLeft="@dimen/dish_list_padding"
         android:singleLine="true"
@@ -36,8 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_alignTop="@+id/img"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/img"
         android:paddingLeft="@dimen/dish_list_padding"
+        android:textStyle="bold"
         android:text="TextView"
         android:textSize="22dp" />
 
