--- a/trunk/mytestapp2013/res/layout/favorite_list_header.xml
+++ b/trunk/mytestapp2013/res/layout/favorite_list_header.xml
@@ -7,11 +7,13 @@
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="4" >
+        android:stretchColumns="5" >
 
-        <TableRow
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal" >
+        <TableRow android:paddingTop="10dp">
+
+            <TextView
+                android:layout_width="1dp"
+                android:layout_height="40dp" />
 
             <TextView
                 android:id="@+id/hd_sn"
@@ -31,7 +33,7 @@
 
             <TextView
                 android:id="@+id/hd_price"
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:padding="@dimen/dish_list_padding"
@@ -40,7 +42,7 @@
 
             <TextView
                 android:id="@+id/hd_amount"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:padding="@dimen/dish_list_padding"
