--- a/trunk/mytestapp2013/res/layout/favorite_list.xml
+++ b/trunk/mytestapp2013/res/layout/favorite_list.xml
@@ -18,7 +18,7 @@
         android:layout_below="@+id/favoriteList"
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
-        android:baselineAligned="false" >
+        android:baselineAligned="true" >
 
         <TextView
             android:layout_width="wrap_content"
