--- a/mytestapp2013/res/layout/dish_detail.xml
+++ b/mytestapp2013/res/layout/dish_detail.xml
@@ -23,16 +23,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Price(kr):"
-            android:textSize="20dp" />
+            android:text="kr"
+            android:textSize="24dp" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="3dp"
             android:gravity="center"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/minus"
