--- a/mytestapp2013/res/layout/order_his.xml
+++ b/mytestapp2013/res/layout/order_his.xml
@@ -1,11 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FavoriteList" >
+    android:layout_height="match_parent" >
 
     <ListView
-        android:id="@+id/favoriteList"
+        android:id="@+id/hisList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
     </ListView>
@@ -15,14 +14,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/favoriteList"
+        android:layout_below="@+id/hisList"
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
         android:baselineAligned="true" >
 
         <TextView
+            android:id="@+id/txtOrderDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text=""
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
             android:text="TableNO." />
 
         <EditText
@@ -60,24 +67,23 @@
         android:layout_marginTop="60dp" >
 
         <Button
-            android:id="@+id/btnHis"
+            android:id="@+id/btnPrevious"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btnHis" />
+            android:text="@string/btnPrevious" />
 
         <Button
-            android:id="@+id/btnCancle"
+            android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:text="@string/btnCancle" />
+            android:text="@string/btnNext" />
 
-        <Button
-            android:id="@+id/btnSubmit"
+        <TextView
+            android:id="@+id/txtHisCountInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="@string/btnSubmit" />
+            android:layout_marginLeft="16dp" />
     </LinearLayout>
 
 </RelativeLayout>
