--- a/mytestapp2013/res/menu/main.xml
+++ b/mytestapp2013/res/menu/main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/favorite"
         android:orderInCategory="101"
         android:showAsAction="always"
-        android:title="@string/favorite"/>
+        android:title="@string/myOrder"/>
     <item
         android:id="@+id/language"
         android:orderInCategory="102"
