--- a/mytestapp2013/res/layout/activity_dish_list.xml
+++ b/mytestapp2013/res/layout/activity_dish_list.xml
@@ -4,31 +4,9 @@
     android:layout_height="match_parent"
     tools:context=".DishList" >
 
-    <HorizontalScrollView
-        android:id="@+id/speHsv"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginTop="3dp"
-        android:orientation="horizontal"
-        android:scrollbars="none"
-        android:visibility="gone" >
-
-        <LinearLayout
-            android:id="@+id/specialListLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#EEEEEE"
-            android:orientation="horizontal" >
-        </LinearLayout>
-    </HorizontalScrollView>
-
     <ListView
         android:id="@+id/dishList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/speHsv" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
