--- a/mytestapp2013/res/layout/main.xml
+++ b/mytestapp2013/res/layout/main.xml
@@ -4,11 +4,24 @@
     android:layout_height="match_parent"
     tools:context=".DishList" >
 
+    <TextView
+        android:id="@+id/speListTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:paddingLeft="@dimen/dish_list_padding"
+        android:text="@string/speListTitle"
+        android:textSize="24dp"
+        android:textIsSelectable="false"
+        android:textStyle="bold" />
+
     <HorizontalScrollView
         android:id="@+id/speHsv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
+        android:layout_below="@+id/speListTitle"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:layout_marginTop="3dp"
@@ -25,10 +38,32 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-    <ListView
-        android:id="@+id/dishList"
+    <TextView
+        android:id="@+id/ctListTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/speHsv" />
+        android:layout_below="@+id/speHsv"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:paddingLeft="@dimen/dish_list_padding"
+        android:text="@string/ctListTitle"
+        android:textSize="24dp"
+        android:textIsSelectable="false"
+        android:textStyle="bold" />
+
+    <View
+        android:id="@+id/ctListTitleLine"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:paddingLeft="@dimen/dish_list_padding"
+        android:paddingRight="@dimen/dish_list_padding"
+        android:layout_below="@+id/ctListTitle"
+        android:background="#CCCCCC" />
+
+    <ListView
+        android:id="@+id/menuList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ctListTitleLine" />
 
 </RelativeLayout>
