--- a/mytestapp2013/res/layout/cover.xml
+++ b/mytestapp2013/res/layout/cover.xml
@@ -10,15 +10,6 @@
     tools:context=".Cover" >
 
     <Button
-        android:id="@+id/btnEnglish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:text="@string/lanEnglish" />
-
-    <Button
         android:id="@+id/btnChinese"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,5 +26,15 @@
         android:layout_alignBottom="@+id/btnChinese"
         android:layout_toRightOf="@+id/btnChinese"
         android:text="@string/lanSwedish" />
+
+    <Button
+        android:id="@+id/btnEnglish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="162dp"
+        android:layout_marginLeft="31dp"
+        android:text="@string/lanEnglish" />
 
 </RelativeLayout>
