--- a/mytestapp2013/res/layout/cover.xml
+++ b/mytestapp2013/res/layout/cover.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/coverLayout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coverLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/btnEnglish"
         android:layout_alignBottom="@+id/btnEnglish"
+        android:layout_marginLeft="14dp"
         android:layout_toRightOf="@+id/btnEnglish"
         android:text="@string/lanChinese" />
 
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/btnChinese"
         android:layout_alignBottom="@+id/btnChinese"
+        android:layout_marginLeft="14dp"
         android:layout_toRightOf="@+id/btnChinese"
         android:text="@string/lanSwedish" />
 
@@ -31,10 +33,10 @@
         android:id="@+id/btnEnglish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="162dp"
-        android:layout_marginLeft="31dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="430dp"
         android:text="@string/lanEnglish" />
 
 </RelativeLayout>
